--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "electron": "electron .",
-    "electron-build": "ng build --prod"
+    "run": "electron ."
   },
   "private": true,
   "dependencies": {
