--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "electron": "electron ."
+    "electron": "ng build && electron ."
   },
   "private": true,
   "dependencies": {
