--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "semantic-ui-angular": "^0.3.0",
+    "semantic-ui-angular-jquery": "^0.2.4",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -34,6 +36,8 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/jquery": "^3.2.16",
+    "@types/semantic-ui": "^2.2.6",
     "codelyzer": "~3.2.0",
     "electron": "^1.7.9",
     "jasmine-core": "~2.6.2",
