--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
-    "semantic-ui-angular": "^0.3.0",
-    "semantic-ui-angular-jquery": "^0.2.4",
+    "jquery": "^3.2.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
